[gd_scene load_steps=10 format=2]

[ext_resource path="res://Shaders/Blink.shader" type="Shader" id=1]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemigos/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://EnemigoAtaca.gd" type="Script" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/active = false

[sub_resource type="Animation" id=2]
resource_name = "BlinkEnemigoAtaca"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "StopBlinkEnemigoAtaca"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="EnemigoAtaca" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/BlinkEnemigoAtaca = SubResource( 2 )
anims/StopBlinkEnemigoAtaca = SubResource( 3 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_mask = 4

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="HitboxAttack" parent="." instance=ExtResource( 4 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitboxAttack" index="0"]
disabled = true

[node name="WallDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="NoDamageZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NoDamageZone"]

[node name="Spikes" type="Area2D" parent="."]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spikes"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="TimerAtaque" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="WallDetector" to="." method="_on_WallDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="NoDamageZone" to="." method="_on_NoDamageZone_body_entered"]
[connection signal="body_exited" from="NoDamageZone" to="." method="_on_NoDamageZone_body_exited"]
[connection signal="timeout" from="TimerAtaque" to="." method="_on_TimerAtaque_timeout"]

[editable path="HitboxAttack"]
